--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@myriaddreamin/typst-ts-web-compiler": "^0.6.1-rc2",
+    "@myriaddreamin/typst.react": "^0.6.1-rc2",
+    "@myriaddreamin/typst.ts": "^0.6.1-rc2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-router": "^1.130.12",
     "@tanstack/react-router-devtools": "^1.130.13",
+    "@uiw/react-codemirror": "^4.24.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
