--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+	      "lib": ["esnext", "dom", "webworker"],  // add webworker here
 	      "baseUrl": ".",
     "paths": {
       "@/*": [
